tests/machine/x/c/len_map.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/len_map.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/len_map.c:25:46: error: ‘tmp_item_t’ has no member named ‘len’
   25 |   printf("%d\n", (tmp_item_t){.a = 1, .b = 2}.len);
      |                                              ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:51Z
